; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libcaption/src/extr_eia608.c_eia608_midrow_change.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libcaption/src/extr_eia608.c_eia608_midrow_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @eia608_midrow_change(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = shl i32 %7, 11
  %9 = and i32 %8, 2048
  %10 = or i32 4384, %9
  %11 = load i32, i32* %5, align 4
  %12 = shl i32 %11, 1
  %13 = and i32 %12, 14
  %14 = or i32 %10, %13
  %15 = load i32, i32* %6, align 4
  %16 = and i32 %15, 1
  %17 = or i32 %14, %16
  %18 = call i32 @eia608_parity(i32 %17)
  ret i32 %18
}

declare dso_local i32 @eia608_parity(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
